tests/invalid/trait/method_call_explicit_ufcs_trait_lifetime_arg.facet
trait Runner {
  fn run(self: Self) -> unrestricted isize;
}

impl Runner for unrestricted isize {
  fn run(self: Self) -> unrestricted isize {
    self
  }
}

fn main<'a>(x: unrestricted isize) -> unrestricted isize {
  (<unrestricted isize as Runner<'a>>::run x)
}
